debug : correcting check alignment in single choice menus

--- a/vanillaSelectBox.css
+++ b/vanillaSelectBox.css
@@ -50,14 +50,6 @@ li[data-parent].open:not(.hidden-search){
 	text-align:left;
 }
 
-.vsb-menu li{
-	display: list-item;
-	font-size: 12px;
-	background-color: #fff;
-	min-height:1.4em;
-	padding: 0.2em;
-}
-
 .vsb-menu li:hover {
 	background: linear-gradient(#f5f5f5, #e8e8e8);
 }
@@ -114,6 +106,17 @@ li.disabled{
 	white-space: nowrap;
 }
 
+/*
+.vsb-menu li{
+	display: list-item;
+	font-size: 12px;
+	background-color: #fff;
+	min-height:1.4em;
+	padding: 0.2em;
+}
+*/
+
+
 .vsb-menu li {
 	font-size: 14px;
 	background-color: #fff;
@@ -151,11 +154,15 @@ li.disabled{
 	border-radius:2px;
 }
 
+.vsb-menu :not(.multi) li.active {
+	margin-left:7px;
+}
+
 .vsb-menu :not(.multi) li.active::before {
 	content: "";
 	display: inline-block;
 	font-size: inherit;
-	margin-left:-16px;
+	margin-left:-18px;
 	transform: rotate(45deg);
 	height: 10px;
 	width:  5px;
